--- a/collab-file-cloner/package.json
+++ b/collab-file-cloner/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collab-notebook-cloner",
+  "name": "collab-file-cloner",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
